--- a/src/my-app.html
+++ b/src/my-app.html
@@ -8,24 +8,25 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../bower_components/polymer/polymer-element.html">
-<link rel="import" href="../bower_components/app-layout/app-drawer/app-drawer.html">
-<link rel="import" href="../bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
-<link rel="import" href="../bower_components/app-layout/app-header/app-header.html">
-<link rel="import" href="../bower_components/app-layout/app-header-layout/app-header-layout.html">
-<link rel="import" href="../bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
-<link rel="import" href="../bower_components/app-layout/app-toolbar/app-toolbar.html">
-<link rel="import" href="../bower_components/app-route/app-location.html">
-<link rel="import" href="../bower_components/app-route/app-route.html">
-<link rel="import" href="../bower_components/iron-pages/iron-pages.html">
-<link rel="import" href="../bower_components/iron-selector/iron-selector.html">
-<link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="my-icons.html">
+<link rel="import" href="./../bower_components/polymer/polymer-element.html">
+<link rel="import" href="./../bower_components/app-layout/app-drawer/app-drawer.html">
+<link rel="import" href="./../bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
+<link rel="import" href="./../bower_components/app-layout/app-header/app-header.html">
+<link rel="import" href="./../bower_components/app-layout/app-header-layout/app-header-layout.html">
+<link rel="import" href="./../bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
+<link rel="import" href="./../bower_components/app-layout/app-toolbar/app-toolbar.html">
+<link rel="import" href="./../bower_components/app-route/app-location.html">
+<link rel="import" href="./../bower_components/app-route/app-route.html">
+<link rel="import" href="./../bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="./../bower_components/iron-selector/iron-selector.html">
+<link rel="import" href="./../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="./my-icons.html">
 
-<link rel="lazy-import" href="my-view1.html">
-<link rel="lazy-import" href="my-view2.html">
-<link rel="lazy-import" href="my-view3.html">
-<link rel="lazy-import" href="my-view404.html">
+<link rel="lazy-import" href="./wto-background.html">
+<link rel="lazy-import" href="./wto-experience.html">
+<link rel="lazy-import" href="./wto-sample.html">
+<link rel="lazy-import" href="./wto-jukebox.html">
+<link rel="lazy-import" href="./my-view404.html">
 
 <dom-module id="my-app">
   <template>
