--- a/src/my-app.html
+++ b/src/my-app.html
@@ -25,7 +25,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="lazy-import" href="./wto-background.html">
 <link rel="lazy-import" href="./wto-experience.html">
 <link rel="lazy-import" href="./wto-sample.html">
-<link rel="lazy-import" href="./wto-jukebox.html">
+<link rel="lazy-import" href="./wto-jukebox-admin.html">
 <link rel="lazy-import" href="./my-view404.html">
 
 <dom-module id="my-app">
@@ -76,9 +76,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <!-- Drawer content -->
       <app-drawer id="drawer" slot="drawer">
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="Background" href="background">Background</a>
-          <a name="Experience" href="experience">Experience</a>
-          <a name="Sample" href="sample">Sample</a>
+          <a name="Background" href="Background">Resume</a>
+          <a name="Sample" href="Sample"> Samples</a>
+          <a name="Experience" href="Experience">TBA</a>
         </iron-selector>
       </app-drawer>
 
@@ -94,9 +94,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </app-header>
 
         <iron-pages selected="[[page]]" attr-for-selected="name" fallback-selection="view404" role="main">
-          <wto-background name="background"></wto-background>
-          <wto-experience name="experience"></wto-experience>
-          <wto-sample name="sample"></wto-sample>
+          <wto-background name="Background"></wto-background>
+          <wto-experience name="Experience"></wto-experience>
+          <wto-sample name="Sample"></wto-sample>
+          <wto-jukebox-admin name="jukebox-admin"></wto-jukebox-admin>
           <wto-jukebox name="jukebox"></wto-jukebox>
           <my-view404 name="view404"></my-view404>
         </iron-pages>
@@ -145,7 +146,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         // If no page was found in the route data, page will be an empty string.
         // Deault to 'view1' in that case.
-        this.page = page || 'view1';
+        this.page = page || 'Sample';
 
         // Close a non-persistent drawer when the page & route are changed.
         if (!this.$.drawer.persistent) {
